add a persistent hashmap to QuizAnswer